[package]
name = "res_set"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "impl-default",
    "handleapi",
    "winuser",
    "consoleapi",
    "psapi",
    "processthreadsapi",
] }
anyhow = "1.0"
lazy_static = "1"
regex = "1.10"

[build-dependencies]
winres = "0.1"
